--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,10 @@
 <h1>Home</h1>
 <p><%= homeStartingContent %></p>
 
-<% for (let i=0; i<posts.length; i++) { %>
-<% console.log(posts[i].title); %>
-<% }; %>
+<% posts.forEach(function(post){ %>
+    <div class="post">
+        <h2><%= post.title %></h2>
+        <p><%= post.body %></p>
+        <a href="/posts/<%= post._id %>">Read more</a>
+    </div>
 <%- include("./partials/footer") -%>
