--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,8 @@
 <% posts.forEach(function(post){ %>
     <div class="post">
         <h2><%= post.title %></h2>
-        <p><%= post.body %></p>
+        <p><%= post.content %></p>
         <a href="/posts/<%= post._id %>">Read more</a>
     </div>
+<% }); %>
 <%- include("./partials/footer") -%>
